add 猜数字活动和统计接口
