# internal/model/issue_record.go
@@ -11,3 +11,12 @@ type IssueRecord struct {
 	Merchant     *Merchant `json:"merchant" gorm:"-"`
 	Customer     *Customer `json:"customer" gorm:"-"`
 }
+
+// IssueRecordLog 用户领取福利记录
+type IssueRecordLog struct {
+	Base
+
+	MerchantID   uint64 `json:"merchant_id" gorm:"not null"` // 店铺ID
+	CustomerID   uint64 `json:"customer_id" gorm:"not null"` // 顾客ID
+	TotalReceive uint64 `json:"total_receive"`               // 在对应店铺可领取的总礼品数
+}
